[package]
name = "tools_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tools_lib"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.5.1"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
